Fixed navbar z-index bug

--- a/nomnom/static/style.css
+++ b/nomnom/static/style.css
@@ -45,7 +45,7 @@ body > div.container {
 .navbar {
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 100;
 }
 
 .item { /* Masonry bricks or child elements */
